Remember to check user input in getData function

--- a/235/project2/index.html
+++ b/235/project2/index.html
@@ -16,16 +16,16 @@
         </div>
         <div id="setup">
             <p>Difficulty: <select name="difficulty">
-                <option value="any">Any</option>
-                <option value="easy">Easy</option>
-                <option value="medium">Medium</option>
-                <option value="hard">Hard</option>
+                <option class="difficulty" value="any">Any</option>
+                <option class="difficulty" value="easy">Easy</option>
+                <option class="difficulty" value="medium">Medium</option>
+                <option class="difficulty" value="hard">Hard</option>
             </select></p>
             <p>Category: <select name="category">
-                <option value="Any">Any</option>
-                <option value="general">General Knowledge</option>
-                <option value="games">Entertainment: Video Games</option>
-                <option value="sports">Sports</option>
+                <option class="category" value="Any">Any</option>
+                <option class="category" value="General Knowledge">General Knowledge</option>
+                <option class="category" value="Entertainment: Video Games">Entertainment: Video Games</option>
+                <option class="category" value="Sports">Sports</option>
             </select></p>
             <h2><button>Begin Quiz</button></h2>
         </div>
