Project 2 Progress to get it fixed

--- a/235/project2/index.html
+++ b/235/project2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Project2</title>
     <script type="text/javascript" src="js/script.js"></script>
 </head>
@@ -57,7 +58,8 @@
         <div id="answers">
             
         </div>
-        <p id="result"></p>
+        <h2 id="result"></h2>
+        <h2><button id="continue">Continue</button></h2>
     </div>
 </body>
 </html>
