--- a/235/project3/game.html
+++ b/235/project3/game.html
@@ -15,5 +15,6 @@
     <script src="js/script.js"></script>
     <script src="js/classes.js"></script>
     <script src="js/keys.js"></script>
+    <script src="js/utilities.js"></script>
 </body>
 </html>
