Couldn't recreate asteroids

--- a/235/project3/proposal/proposal.html
+++ b/235/project3/proposal/proposal.html
@@ -22,5 +22,17 @@
      that break apart when shot until they're fully destroyed.</p>
     <img src="images/Asteroids.png" alt="Image of Start Screen">
     <img src="images/Asteroids2.png" alt="Image of Gameplay">
+    <br>
+    <h1>Documentation</h1>
+    <p>Recreating asteroids was a massive struggle and I unfortunately couldn't even finish the game.
+        I was able to get some of the core game to work a little bit. The ship moves based on where the user looks and fires where the user looks.
+        You use the left and right arrow keys to turn the ship and the arrow key to move the ship forward.
+        You click to shoot but unfortunately I was unable to add the hyperspace feature which allows the player to pop out of a pinch.
+        Another error you may notice is that the asteroids kind of strictly spawn from the bottom of the screen.
+        This is due to me struggling with have them spawn all around the screen. Hitboxes are kind of messed up as well, especially with the large asteroids.
+        The asteroids don't split in the right spot either(or maybe they don't split at all). I was also unable to add the flying ship that shoots across the screen.
+        <br>
+        Overall, this project wasn't the success I hoped for. I really thought I would be able to complete this and tried my hardest but couldn't. Still I hope you find some way to enjoy it.
+    </p>
 </body>
 </html>
