Updates to proposal

--- a/235/project3/proposal/proposal.html
+++ b/235/project3/proposal/proposal.html
@@ -34,5 +34,11 @@
         <br>
         Overall, this project wasn't the success I hoped for. I really thought I would be able to complete this and tried my hardest but couldn't. Still I hope you find some way to enjoy it.
     </p>
+    <br>
+    <h2>Sources</h2>
+    <p><a href="https://millionthvector.blogspot.com/p/free-sprites.html">Ship</a></p>
+    <p><a href="https://opengameart.org/content/asteroids">Asteroids</a></p>
+    <p><a href="https://elements.envato.com/space-blast-9G57YTB?utm_source=mixkit&utm_medium=referral&utm_campaign=elements_mixkit_cs_sfx_search_no_results&_ga=2.37459237.44590225.1651459986-1565530181.1651459986">Hit sound</a></p>
+    <p><a href="https://elements.envato.com/laser-blast-B28LJAU?utm_source=mixkit&utm_medium=referral&utm_campaign=elements_mixkit_cs_sfx_search_no_results&_ga=2.37459237.44590225.1651459986-1565530181.1651459986">Laser Sound</a></p>
 </body>
 </html>
