--- a/235/project3/proposal/proposal.html
+++ b/235/project3/proposal/proposal.html
@@ -20,8 +20,8 @@
     <p>Gameplay: The player will be able to do all the controls of the classic Asteriods. 
         They can move the ship around and spin their ship 360 degrees while shooting Asteriods
      that break apart when shot until they're fully destroyed.</p>
-    <img src="images/Asteroids.png" alt="Image of Start Screen">
-    <img src="images/Asteroids2.png" alt="Image of Gameplay">
+    <img src="../images/Asteroids.png" alt="Image of Start Screen">
+    <img src="../images/Asteroids2.png" alt="Image of Gameplay">
     <br>
     <h1>Documentation</h1>
     <p>Recreating asteroids was a massive struggle and I unfortunately couldn't even finish the game.
