Updated my portfolio

--- a/235/project1/index.html
+++ b/235/project1/index.html
@@ -5,19 +5,22 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Project1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div id="header">
             <header>
                 <h1>Rahmel Church Jr.</h1>
+                <h2>Looking For A CO-OP or Internship Position As A Game Developer</h2>
                 <img src="images/me.jpg" alt="Picture of Me">
             </header>
         </div>
         <div id="main">
             <main>
                 <div id="about">
-                    <h2>Looking For A CO-OP or Internship Position As A Game Developer</h2>
                     <p>
                         Hello, My name is Rahmel Church Jr. and I am a second year student at the Rochester Institute of Technology(RIT).
                         I am currently majoring in Game Design/Development and I aspire to become a game developer in the future.
@@ -28,24 +31,24 @@
                 <div id="projects">
                     <div id="project1">
                         <div>
-                            <h2>Placeholder Game</h2>
-                            <p>Description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project.</p>
+                            <h2><a href="https://github.com/SimonDumas27/gdaps2_2215_team_D/releases/tag/S4">Friendly Fire</a></h2>
+                            <p>Friendly Fire is a puzzle, action game where you are a knight that tried to fight someone stronger than you and you lost, losing your sword in the process. Now you must escape a dungeon without attacking but by making your enemies attack each other. This game was created in C# using the monogame engine. For this project, I worked on enemy implementation and health increase after every level. Enemy implementation had many problems with loading them from the level file and putting them in the right place. For this issue, I worked with the groupmate that implemented the level file reader and we tackled enemy loading and implementation together. There are many levels in this game with many more features to come. I hope you enjoy.</p>
                         </div>
-                        <img src="images/placeholder.png" alt="Image of Project 1">
+                        <img src="images/friendlyFire.png" alt="Image of Friendly Fire">
                     </div>
                     <div id="project2">
                         <div>
-                            <h2>Placeholder Game</h2>
-                            <p>Description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project.</p>
+                            <h2><a href="https://people.rit.edu/rac3090/235/project3/game.html">Asteroids</a></h2>
+                            <p>Asteroids is a remake of the classic game of the same name. You control a ship in an asteroid field and you try to survive for as long as possible and try to get a high score. This game was made in JavaScript using the Pixi.js engine. The game doesn't have a bunch of irregular shapes for asteroids and a trianle for the ship but actual sprites instead. In the future, I'm thinking of adding different backgrounds instead of just the standard black and white background. A challenge I tackled was the movement of the ship since it is difficult to have a ship move based on where it is looking. With the help of a friend, I was able to figure out what I needed to add to the creation of the ship and move the ship correctly. I hope you enjoy.</p>
                         </div>
-                        <img src="images/placeholder.png" alt="Image of Project 2">
+                        <img src="images/asteroids.png" alt="Image of Asteroids">
                     </div>
                     <div id="project3">
                         <div>
-                            <h2>Placeholder Game</h2>
-                            <p>Description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project.</p>
+                            <h2><a href="https://people.rit.edu/rac3090/235/project2/">Trivia</a></h2>
+                            <p>Trivia is a basic game of trivia that offers many different genres, difficulties, and up to fifty questions. A user can choose these different settings and challenge their knowledge in all areas or certain areas choosing between the difficulties of easy, medium, and hard. Users can also answer questions at any difficulty. This project was made in JavaScript and the toughest part was getting the data to load correctly. Carefully reading the API I used helped fix this issue and I was able to display questions and answers correctly. I plan on adding more CSS styles to the site so it can be much more presentable and fun to try out. I hope you enjoy.</p>
                         </div>
-                        <img src="images/placeholder.png" alt="Image of Project 3">
+                        <img src="images/trivia.png" alt="Image of Trivia">
                     </div>
                 </div>
             </main>
@@ -53,10 +56,8 @@
         <div id="footer">
             <footer>
                 <h2>Contact Info & Resume</h2>
-                <div id="resume">
-                    <img src="images/Rahmel-Church-Jr-Resume.png" alt="Resume PDF Image">
-                </div>
                 <div id="footItems">
+                    <p><a target="_blank" href="documents/Rahmel-Church-Jr-Resume.pdf">Resume</a></p>
                     <p>Email: rahmelchurch@gmail.com</p>
                     <p><a target = "_blank" href="https://www.linkedin.com/in/rahchurch26">LinkedIn</a></p>
                 </div>
