--- a/235/project1/documentation.html
+++ b/235/project1/documentation.html
@@ -13,7 +13,7 @@
         The objective of this portfolio site is to build a reputation and for companies to use for their hiring process. 
         I want companies to see the projects I have completed as a way of understanding my abilities and how well I work with others. 
         Each project will be a story of how a team and I(or just me) completed it and the part I played in the process. 
-        Image sizes will be between 200 to 300 pixels.</p>
+        Image sizes will be 200 by 200 pixels.</p>
     <br>
     <h2>Images Courtesy of <a target = "_blank" href="https://placeholder.com/">Placeholder</a></h2>
     <ul>
